# backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-cicd.yml  docker-compose-file-template.yml  pyproject.toml  start.py
.github/workflow/: teamatch_test.yml
.github/workflows/: push_test.yml  teamatch_deploy.yml  teamatch_test.yml
alembic/: env.py
alembic/versions/: 32add570a29f_add_notification_notificationtemplate_.py  3e4e9958b6c2_recreate_all_table.py  5a0e5ac86823_add_group_gr_member_table.py  6b2309daf787_add_notification_notificationtemplate_.py  71161f9ad09f_add_mr_rcmed_member_table.py  720954a6d8c7_add_mr_member_table.py  7218187a06f0_recreate_all_table.py  84523463fe09_add_mr_member_tag_table.py  8a37bb165d92_add_mr_member_table.py  8b56fa18895b_add_notification_notificationtemplate_.py  8c5bdd75dd78_add_mr_liked_hated_member_table.py  8d5157780f1c_initial_migration.py  9c1bc9a2093e_first_migration.py  a64c440de50a_add_gr_member_table.py  c2e93411c48c_create_demo_1_database_table.py  cdd99b69c07a_add_is_active_to_user_table.py  d50d56ca8cc3_add_mr_member_table.py  d7a3d43d8524_add_scheduledjob_table.py  fd49f0eea2b2_user_table_password_set_nullable_and_.py
app/: main.py  utils.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_gr_member.py  crud_group.py  crud_matching_room.py  crud_notification.py  crud_swipe_card.py  crud_user.py
app/database/: base.py  init_db.py  session.py
app/models/: __init__.py  bind_user.py  gr_member.py  group.py  matching_event.py  matching_room.py  mr_liked_hated_member.py  mr_member.py  mr_member_tag.py  mr_rcmed_member.py  notification.py  scheduled_job.py  user.py
app/permission/: __init__.py  required.py  roles.py
app/routers/: deps.py
app/schemas/: __init__.py  gr_member.py  group.py  matching_room.py  notification.py  sso_login.py  swipe_card.py  user.py
microservices/swipecard/: Dockerfile  crud.py  database.py  recommend_feature.py  recommendation_context.py  schemas.py  swipe.py  (+2 more)
scripts/: add_table.sh  prestart.sh  run_test.sh  setup.sh
temp/: gr_member.py  group.py  matching_room.py  mr_member.py  notification.py  notification_template.py  schedule_job.py  tag.py
test/: contest.py  test_auth.py  test_backend_main.py  test_group.py  test_matching_room.py  test_notification.py  test_start_app.py  test_swipe_card.py  test_user.py
(+37 files in other folders)
